--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.1.4",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "router": "^1.3.8"
   }
 }
