--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.21",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "stripe": "^12.1.1",
+    "uuid": "^8.3.2"
   }
 }
