--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "create-data": "node data/generateFakeData.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.1.4",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.21",
     "router": "^1.3.8",
     "stripe": "^12.1.1",
