--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.21",
     "router": "^1.3.8",
+    "sass-loader": "^8.0.0",
     "stripe": "^12.1.1",
     "uuid": "^8.3.2"
   }
