--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.1.4",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.21",
+    "react-toastify": "^8.0.3",
     "router": "^1.3.8",
     "sass-loader": "^8.0.0",
     "stripe": "^12.1.1",
