--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.1.4",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.21",
     "router": "^1.3.8",
     "sass-loader": "^8.0.0",
+    "stream": "^0.0.2",
     "stripe": "^12.1.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "webpack-node-externals": "^3.0.0"
   }
 }
