--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^4.6.1",
+    "crypto": "npm:crypto-browserify",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass-loader": "^8.0.0",
+    "stream": "npm:stream-browserify",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
