--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "fs": "^0.0.1-security",
     "mongoose": "^6.1.4",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.21",
+    "path": "^0.12.7",
     "router": "^1.3.8",
     "sass-loader": "^8.0.0",
     "stream": "^0.0.2",
@@ -27,5 +29,8 @@
   },
   "devDependencies": {
     "webpack-node-externals": "^3.0.0"
+  },
+  "browser": {
+    "crypto": false
   }
 }
