--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^4.6.1",
+    "chart.js": "^3.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "crypto": "npm:crypto-browserify",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
