--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.21",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
+    "recharts": "^2.7.2",
     "router": "^1.3.8",
     "sass-loader": "^8.0.0",
     "stream": "^0.0.2",
