--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^8.2.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
